<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Conversion Calculator</string>
    <string name="hello_world">Conversions</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_currency_acitvity">CurrencyAcitvity</string>
    <string name="second_actEdit">Enter Numbers</string>
    <string name="c_button">Currency</string>
    <string name="w_button">Weight</string>
    <string name="l_button">Length</string>
    <string name="title_activity_length">lengthActivity</string>
    <string name="l_hint">Enter Value(in centimeters)</string>
    <string name="c_button1">To Dollars</string>
    <string name="c_button2">To Pounds</string>
    <string name="length_button1">To Inches</string>
    <string name="length_button2">To Meters</string>
    <string name="length_button3">To MilliMeters</string>
    <string name="length_button4">To Feet</string>
    <string name="length_button5">To Yards</string>
    <string name="answer">Answer Is : </string>
    <string name="title_activity_weight">Weight</string>
    <string name="title_activity_weight_activity">weight_activity</string>
    <string name="weight_hint">Enter Numbers(in grams)</string>
    <string name="weight_button1">To KG</string>
    <string name="weight_button2">To Ounces</string>
    <string name="weight_button3">To MilliGrams</string>
    <string name="weight_button4">To MicroGrams</string>
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="unit_is">Unit is : </string>
    <string name="title_activity_currency">CurrencyActivity</string>
    <string name="checkboxxx">Include Units</string>
    <string name="title_activity_convert_money">ConvertMoney</string>
    <string name="rating">Rate App</string>
    <string name="title_activity_rating">RatingAct</string>
    <string name="fair">Fair</string>
    <string name="Avg">Average</string>
    <string name="Exellent">Excellent</string>
    <string name="submit">Submit</string>
    <string name="title_activity_saved_data">SavedData</string>
    <string name="detail">Show Detail</string>
    <string name="inserted">Value inserted : </string>
    <string name="ConvertedTo">Converted to : </string>
    <string name="ConvertedValue">Converted Value : </string>
    <string name="ToEuro">To Euro</string>
    <string name="ToDinaar">To Dinar</string>
    <string name="RateApp">Rate Our App!</string>
    <string name="chooseone">Choose one : </string>
    <string name="radioo">RadioButtons</string>
    <string name="Seekbaar">Seekbar</string>
</resources>
